--- a/Passenger counter app/index.css
+++ b/Passenger counter app/index.css
@@ -1,5 +1,6 @@
 body {
     background-image: url("images/station.jpg");
+    background-position: center;
     background-size: cover;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
@@ -18,7 +19,9 @@ h2 {
 }
 
 button {
-    border: none;
+    /* border: none; */
+    border-width: 1px;
+    border-color: black;
     padding-top: 10px;
     padding-bottom: 10px;
     color: white;
