--- a/chess profile view/style.css
+++ b/chess profile view/style.css
@@ -8,6 +8,24 @@ h1,h2,h3,h4,h5,h6
     display: inline;
 }
 
+
+.chesslogocontainer{
+    background-color: aqua;
+    width:35%;
+    height: 100%;
+    position: absolute;
+}
+
+.logoclass{
+    display: inline;
+    position: absolute;
+    width: 80%;
+    margin-left: 10%;
+    height: auto;
+    margin-top: 350px;
+    background-color: red;
+}
+
 .container {    
     width:340px;
     position: absolute;
