--- a/chess profile view/style.css
+++ b/chess profile view/style.css
@@ -10,7 +10,7 @@ h1,h2,h3,h4,h5,h6
 
 
 .chesslogocontainer{
-    background-color: aqua;
+    /* background-color: aqua; */
     width:35%;
     height: 100%;
     position: absolute;
@@ -23,7 +23,7 @@ h1,h2,h3,h4,h5,h6
     margin-left: 10%;
     height: auto;
     margin-top: 350px;
-    background-color: red;
+    /* background-color: red; */
 }
 
 .container {    
