--- a/chess profile view/style.css
+++ b/chess profile view/style.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
+
+
 body
 {
     background-color: #2C2B29;
     color: #fff;
+    font-family: 'Poppins', sans-serif;
 }
 h1,h2,h3,h4,h5,h6
 {
@@ -11,7 +15,7 @@ h1,h2,h3,h4,h5,h6
 
 .chesslogocontainer{
     /* background-color: aqua; */
-    width:35%;
+    width:15%;
     height: 100%;
     position: absolute;
 }
@@ -19,10 +23,8 @@ h1,h2,h3,h4,h5,h6
 .logoclass{
     display: inline;
     position: absolute;
-    width: 80%;
-    margin-left: 10%;
+    width: 100%;
     height: auto;
-    margin-top: 350px;
     /* background-color: red; */
 }
 
